<resources>
    <string name="app_name">exemplo</string>
    <string name="title_activity_act_abas">ActAbas</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="timestamp">Timestamp</string>
    <string name="device_information">Device Information</string>
    <string name="brand">Brand</string>
    <string name="device">Device</string>
    <string name="model">Model</string>
    <string name="id">Id</string>
    <string name="product">Product</string>
    <string name="build_info">Build Info</string>
    <string name="sdk">SDK</string>
    <string name="release">Release</string>
    <string name="incremental">Incremental</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="imagem">imagem</string>
    <string name="drawerlayout_header">DrawerLayout Header</string>
    <string name="cadastro_de_funcion_rio">Cadastro de Funcionário</string>
    <string name="nome">nome</string>
    <string name="endere_o">endereço</string>
    <string name="profiss_o">profissão</string>
    <string name="enviar">Enviar</string>
    <string name="tela_vermelha">Tela Vermelha</string>
    <string name="tela_verde">Tela Verde</string>
    <string name="tela_azul">Tela Azul</string>
    <string name="tela_fragments">Tela Fragments</string>
    <string name="tela_comunica_frags">Tela Comunica Frags</string>
    <string name="drawer">Drawer</string>
    <string name="nav_drawer">Nav Drawer</string>
    <string name="recycler">Recycler</string>
    <string name="revisao">Ré visão Frags</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="fusca_69_lindo">Fusca 69 LINDO!</string>
    <string name="camaro_meia_boca">Camaro Meia Boca</string>
    <string name="fusca_69">Fusca 69</string>
    <string name="camaro_69">Camaro 69</string>
    <string name="ir_para_fragmentos">Ir para Fragmentos</string>
    <string name="ir_para_comunica_o_de_fragmentos">Ir para Comunicação de Fragmentos</string>
    <string name="whiskas_sache">WHISKAS SACHE</string>
    <string name="dialog">Dialog</string>
    <string name="rafinha_exception">Rafinha Exception</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa.</string>
    <string name="pellentesque">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</string>
    <string name="vacilaum">Vacilão</string>
    <string name="create">Create</string>
    <string name="read">READ</string>
    <string name="update">UPDATE</string>
    <string name="destroy">DESTROY</string>
    <string name="sobrenome">sobrenome</string>
    <string name="idade">idade</string>
    <string name="nhe">nhe</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="segundos">segundos</string>
    <string name="textview_em_linearlayout">TextView em LinearLayout</string>
    <string name="button">Button</string>
    <string name="edittext">EditText</string>
    <string name="textview_em_framelayout">TextView em FrameLayout</string>
    <string name="textview_em_constraintlayout">TextView em ConstraintLayout</string>
    <string name="ui">Travar a Tela</string>
    <string name="par_ou_impar">Par ou ímpar?</string>
    <string name="is_par">Este número é PAR</string>
    <string name="is_impar">Este número é ÍMPAR</string>
    <string name="randomizar">Randomizar</string>
    <string name="panel">PANEL</string>
    <string name="title">Title</string>
    <string name="subtitle">subtitle</string>
    <string name="yes">yes</string>
    <string name="neutral">neutral</string>
    <string name="no">no</string>
    <string name="ricota_desc">Derivado de queijo de massa mole, fresco e com baixo teor de gordura. É um queijo uma vez que é preparado por meio da coagulação ácida das proteínas presentes no soro.</string>
    <string name="ricota">Ricota</string>
    <string name="adoro">Adoro!</string>
    <string name="nao_gosto">Não gosto</string>
    <string name="trickjaum">trickjaum</string>
    <string name="facebook_app_id">2919315784863846</string>
    <string name="fb_login_protocol_scheme">fb2919315784863846</string>
    <string name="rafinha">Rafinha</string>
    <string name="whatever">whatever</string>
    <string name="consultar_tempo">Consultar o Tempo</string>
    <string name="dropidaun">Drópi Dáun</string>
    <string name="exemplo_key">whiskas</string>
    <string name="sharedpref">whiskas</string>
    <string name="pontos">pontos</string>
    <string name="uma_chave">key</string>
    <string name="textview">Textículo</string>
</resources>
