<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo_300"
    android:gravity="center"
    android:orientation="vertical"
    >

    <Switch
        android:id="@+id/thread_whiskas"
        style="@style/WRAP_CONTENT"
        />

    <EditText
        android:id="@+id/thread_input"
        style="@style/WRAP_CONTENT"
        android:autofillHints="@string/whiskas_sache"
        android:hint="@string/segundos"
        android:inputType="number"
        />

    <Button
        android:id="@+id/thread_start"
        style="@style/Button"
        android:text="@string/start"
        />

    <Button
        android:id="@+id/thread_stop"
        style="@style/Button"
        android:text="@string/stop"
        />

</LinearLayout>